test/SemanticAnalysis/Const/ConstClassMember.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass(int value) { }

static assert movable<TestClass>;

// Class members can't (or at least, shouldn't)
// be const since this affects the movability
// of the object.
class ConstTestClass(const int value) { }

// CHECK: .loci:14:15: error: static assert predicate evaluates to false
static assert movable<ConstTestClass>;

// CHECK: 1 error generated.
